alignment issue fixed

--- a/styles/common.css
+++ b/styles/common.css
@@ -84,11 +84,11 @@ hr {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  width: 96%;
+  width: 100vw;
   padding: 20px;
   text-align: center;
   justify-content: center;
-  height: 96%;
+  height: 100%;
   align-items: center;
   display: flex;
 }
